welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: '(' expected but identifier found.
    while !estSurBiscuit() {while isFacingTrail() {avance()};gauche()}
          ^SlugHunting:4: error: illegal start of simple expression
}
^